CNDE-2295 refactored confirmation method and page case answer